<resources>
    <string name="title_new_work_day">New work day</string>
    <string name="title_edit_work_day">Edit work day</string>
    <string name="title_new_work_block">New activity</string>
    <string name="title_edit_work_block">Edit activity</string>
    <string name="title_new_category">New category</string>
    <string name="title_edit_category">Edit category</string>
    <string name="title_new">New</string>
    <string name="title_edit">Edit</string>
    <string name="title_history">History</string>
    <string name="title_categories">Categories</string>
    <string name="title_category">Category</string>
    <string name="title_blocks">%1$s</string>
    <string name="title_day_off">Day off</string>
    <string name="manage_work_day_title">Log a work day</string>
    <string name="manage_work_day_subtitle">Create or edit an entry</string>
    <string name="record_day_off_title">Manage your free time</string>
    <string name="record_day_off_subtitle">Set your vacation and sick-days</string>
    <string name="record_history_title">View log history</string>
    <string name="record_history_subtitle">Manage your logged work days</string>
    <string name="work_block">Activity</string>
    <string name="work_blocks">Activities</string>
    <string name="generated_work_block_text">This activity has been generated due to your geofences</string>
    <string name="add_work_blocks">Add activity</string>
    <string name="modify_work_blocks">Modify activities</string>
    <string name="block_subtitle">%1$d h %2$d min in %3$d activity/-ies</string>
    <string name="block_subtitle_empty">Log activities of your work day</string>
    <string name="title_hint">Enter a title (optional)</string>
    <string name="title_mandatory_hint">Enter a title</string>
    <string name="description_hint">Enter a description (optional)</string>
    <string name="date_hint">Choose the date</string>
    <string name="work_block_start_hint">From</string>
    <string name="work_block_end_hint">To</string>
    <string name="statistic_start_hint">From:</string>
    <string name="statistic_end_hint">To:</string>
    <string name="work_container_start_hint">From</string>
    <string name="work_container_end_hint">To (including)</string>
    <string name="default_text_counter">%1$d / %2$d</string>
    <string name="list_work_entry_subtitle">%1$s - %2$d h %3$d min - %4$d activity/-ies</string>
    <string name="list_interval_subtitle">%1$s - %2$s - %3$d day/s</string>
    <string name="general">General</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="map">Map</string>
    <string name="other">Other</string>
    <string name="location">Location</string>
    <string name="gefence_locations">Geofence locations</string>
    <string name="more">More</string>
    <string name="details">Details</string>
    <string name="system_default">Default</string>
    <string name="preset">Preset</string>
    <string name="quick_access">Quick access</string>
    <string name="statistics">Statistics</string>
    <string name="manage">Manage</string>
    <string name="unlimited">Unlimited</string>
    <string name="legal">Legal</string>
    <string name="vacation">Vacation</string>
    <string name="work_week_number">Week %1$s</string>
    <string name="x_days_in_year">%1$d days in %2$s</string>
    <string name="x_days_string_in_year">%1$s days in %2$s</string>
    <string name="hours_minutes_string">%1$s h %2$s min</string>
    <string name="hours_minutes">%1$d h %2$d min</string>
    <string name="hours_minutes_short">%1$dh%2$d</string>
    <string name="dash">-</string>
    <string name="current_status">Geofencing status:</string>
    <string name="status_disabled">Disabled</string>
    <string name="status_not_at_work">Not at work</string>
    <string name="status_at_work_primary">At work</string>
    <string name="status_at_work_secondary">At work</string>
    <string name="status_pending">Pending</string>
    <string name="sick_day_entry_title">%1$s (out of work)</string>
    <string name="sick_day_entry_description">You called in sick</string>
    <string name="sick_day_block_title">Called in sick</string>
    <string name="sick_day_block_description"> </string>
    <string name="call_in_sick_today">Call in sick today</string>
    <string name="call_in_sick_today_description">A sick leave entry will be created automatically</string>
    <string name="vacation_day_entry_title">%1$s (out of work)</string>
    <string name="vacation_day_entry_description">You took vacation</string>
    <string name="vacation_day_block_title">Took vacation</string>
    <string name="vacation_day_block_description"> </string>
    <string name="manual_widget_entry_title">Work day</string>
    <string name="manual_widget_block_title">Manual activity</string>
    <string name="manual_widget_block_description">This activity has been created by manually logging</string>
    <string name="manual_logging_work_entry_created">An activity has been created</string>
    <string name="manual_logging_work_entry_not_created">You must log > 1 minute to create an entry</string>
    <string name="manual_logging_work_entry_not_created_same_day">Logging failed. Start and stop must happen the same day.</string>
    <string name="call_in_vacation_today">Take the day off</string>
    <string name="call_in_vacation_today_description">A vacation entry will be created automatically</string>
    <string name="called_in_vacation_today">Took the day off</string>
    <string name="called_in_sick_today">Called in sick today</string>
    <string name="manage_vacation_title">Manage your vacation</string>
    <string name="manage_vacation_description">Add or remove vacation days</string>
    <string name="manage_sick_leave_title">Manage your sick-leave</string>
    <string name="manage_sick_leave_description">Add or remove sick days</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_no">No</string>
    <string name="dialog_button_exit">Exit</string>
    <string name="dialog_button_edit">Edit</string>
    <string name="dialog_button_stay">Stay</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_disable">Disable</string>
    <string name="dialog_button_enable">Enable</string>
    <string name="dialog_button_select">Select</string>
    <string name="dialog_button_ok">Ok</string>
    <string name="dialog_button_delete">Delete</string>
    <string name="dialog_text_exit_without_saving">Exit without saving?</string>
    <string name="dialog_text_select_category_color">Select category color</string>
    <string name="dialog_text_delete_work_day">Delete work day?</string>
    <string name="dialog_title_already_logged">Already logged</string>
    <string name="dialog_text_edit_existing_work_day">%1$s, has already been logged. Edit this work day?</string>
    <string name="work_entry_stored">Work day stored</string>
    <string name="work_block_added">Activity added</string>
    <string name="category_stored">Category stored</string>
    <string name="vacation_created">Vacation has been created</string>
    <string name="sick_leave_created">Sick leave has been created</string>
    <string name="default_description"> </string>
    <string name="work_block_subtitle">%1$d h %2$d min: %3$s - %4$s</string>
    <string name="work_block_subtitle_at">%1$d h %2$d min: At %3$s</string>
    <string name="undo">Undo</string>
    <string name="item_deleted">%1$d item deleted</string>
    <string name="items_deleted">%1$d items deleted</string>
    <string name="please_choose_date">Please choose a date</string>
    <string name="block_is_incomplete">Please set all data before saving</string>
    <string name="block_invalid_times">End time must be after start time</string>
    <string name="block_invalid_dates">End date must be after start date</string>
    <string name="category_no_name">Please set a category name</string>
    <string name="please_enter_title">Please enter a title</string>
    <string name="selected_elements">%1$d selected</string>
    <string name="primary_work_title">Primary work address</string>
    <string name="primary_work_subtitle">Tap to define</string>
    <string name="secondary_work_title">Secondary work address</string>
    <string name="secondary_work_subtitle">Tap to define</string>
    <string name="working_hours">Working hours</string>
    <string name="work_area">Work area</string>
    <string name="weekly_workdays">Weekly work days (%1$d)</string>
    <string name="weekly_workload">Weekly workload (%1$dh)</string>
    <string name="work_radius">Work radius (%1$dm)</string>
    <string name="yearly_vacation_days">Yearly vacation days (%1$d)</string>
    <string name="yearly_sick_leave">Yearly sick days (%1$s)</string>
    <string name="today">Today</string>
    <string name="work_start">You started work at: %1$s</string>
    <string name="work_end">You ended work at: %1$s</string>
    <string name="your_week">Your week at work</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday_short">Mon</string>
    <string name="tuesday_short">Tue</string>
    <string name="wednesday_short">Wed</string>
    <string name="thursday_short">Thu</string>
    <string name="friday_short">Fri</string>
    <string name="saturday_short">Sat</string>
    <string name="sunday_short">Sun</string>
    <string name="user_categories">User categories</string>
    <string name="work_day_category">Regular</string>
    <string name="work_day_category_description">Just a regular day at work…</string>
    <string name="vacation_category">Vacation</string>
    <string name="vacation_category_description">Exploring the world :)</string>
    <string name="sick_leave_category">Sick leave</string>
    <string name="sick_leave_category_description">Get well soon!</string>
    <string name="empty_category"></string>
    <string name="empty_category_description"></string>
    <string name="default_vacation_title">Vacation</string>
    <string name="default_sick_leave_title">Sick leave</string>
    <string name="select_location">Select location</string>
    <string name="no_address_please_try_again">No address found. Please try again</string>
    <string name="location_not_available">Location not available</string>
    <string name="google_api_client_connection_not_successful">Google Api Client not connected. Reconnecting&#8230;</string>
    <string name="google_api_client_offline">Google Api Client offline. Reconnecting&#8230;</string>
    <string name="address_updated">Work address updated</string>
    <string name="allow_geofencing_title">Geofencing (Beta!)</string>
    <string name="allow_geofencing_subtitle">Enable work tracking with geofences</string>
    <string name="allow_notifications">Notifications</string>
    <string name="allow_notifications_subtitle">Get notified on geofence events</string>
    <string name="export_via_email">Export via email</string>
    <string name="export_data">Export data</string>
    <string name="disable_geofencing_dialog">Disable automatic work tracking with geofences?</string>
    <string name="rv_empty_user_categories">It\'s so empty here right now&#8230;\n\nTo create your own awesome custom category, press +.</string>
    <string name="work_day">Work day</string>
    <string name="sick_leave">Sick leave</string>
    <string name="calendar_note">Note: Only work days are accessible from this view</string>
    <string name="start_date">Select start date</string>
    <string name="end_date">Select end date</string>
</resources>