<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/picker_root"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:weightSum="7"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/monday"
        style="@style/view_week_selector"
        android:text="@string/monday_short" />

    <TextView
        android:id="@+id/tuesday"
        style="@style/view_week_selector"
        android:text="@string/tuesday_short" />

    <TextView
        android:id="@+id/wednesday"
        style="@style/view_week_selector"
        android:text="@string/wednesday_short" />

    <TextView
        android:id="@+id/thursday"
        style="@style/view_week_selector"
        android:text="@string/thursday_short" />

    <TextView
        android:id="@+id/friday"
        style="@style/view_week_selector"
        android:text="@string/friday_short" />

    <TextView
        android:id="@+id/saturday"
        style="@style/view_week_selector"
        android:text="@string/saturday_short" />

    <TextView
        android:id="@+id/sunday"
        style="@style/view_week_selector"
        android:layout_marginEnd="0dp"
        android:text="@string/sunday_short" />

</LinearLayout>