<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ui.fragment.CategoryListFragment">

    <LinearLayout
        style="@style/content_header_white"
        android:orientation="vertical">

        <TextView
            style="@style/content_header_title"
            android:text="@string/preset"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/category_regular"
        style="@style/list_item_single_line"
        android:paddingEnd="0dp">

        <ImageView
            android:id="@+id/work_day_category_selector"
            style="@style/content_entry_selector_image"
            android:src="@drawable/list_circle" />

        <ImageView
            android:id="@+id/work_day_category_icon"
            style="@style/content_entry_selector_icon"
            android:src="@drawable/fw_category_work_day" />

        <LinearLayout
            style="@style/content_title_subtitle_wrapper"
            android:layout_width="match_parent"
            android:paddingEnd="16dp"
            android:layout_toEndOf="@id/work_day_category_icon">

            <TextView
                android:id="@+id/work_day_category_title"
                style="@style/list_item_title"
                android:text="@string/work_day_category" />

            <TextView
                android:id="@+id/work_day_category_description"
                style="@style/list_item_subtitle"
                android:text="@string/work_day_category_description" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/category_vacation"
        style="@style/list_item_single_line"
        android:paddingEnd="0dp">

        <ImageView
            android:id="@+id/vacation_category_selector"
            style="@style/content_entry_selector_image"
            android:src="@drawable/list_circle" />

        <ImageView
            android:id="@+id/vacation_category_icon"
            style="@style/content_entry_selector_icon"
            android:src="@drawable/fw_vacation_3" />

        <LinearLayout
            style="@style/content_title_subtitle_wrapper"
            android:layout_width="match_parent"
            android:paddingEnd="16dp"
            android:layout_toEndOf="@id/vacation_category_icon">

            <TextView
                android:id="@+id/vacation_category_title"
                style="@style/list_item_title"
                android:text="@string/vacation_category" />

            <TextView
                android:id="@+id/vacation_category_description"
                style="@style/list_item_subtitle"
                android:text="@string/vacation_category_description" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/category_sick_leave"
        style="@style/list_item_single_line"
        android:paddingEnd="0dp">

        <ImageView
            android:id="@+id/sick_leave_category_selector"
            style="@style/content_entry_selector_image"
            android:src="@drawable/list_circle" />

        <ImageView
            android:id="@+id/sick_leave_category_icon"
            style="@style/content_entry_selector_icon"
            android:src="@drawable/fw_sick_leave_2" />

        <LinearLayout
            style="@style/content_title_subtitle_wrapper"
            android:layout_width="match_parent"
            android:paddingEnd="16dp"
            android:layout_toEndOf="@id/sick_leave_category_icon">

            <TextView
                android:id="@+id/sick_leave_category_title"
                style="@style/list_item_title"
                android:text="@string/sick_leave_category" />

            <TextView
                android:id="@+id/sick_leave_category_description"
                style="@style/list_item_subtitle"
                android:text="@string/sick_leave_category_description" />
        </LinearLayout>
    </RelativeLayout>

    <include layout="@layout/content_space" />

    <LinearLayout
        style="@style/content_header_white"
        android:orientation="vertical">

        <TextView
            style="@style/content_header_title"
            android:text="@string/user_categories" />
    </LinearLayout>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator_root"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/content_recycler" />

        <TextView
            android:id="@+id/empty_recycler"
            style="@style/list_empty_view"
            android:text="@string/rv_empty_user_categories" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/add_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_white_24dp"
            app:layout_anchorGravity="bottom|right|end"
            app:layout_anchor="@id/coordinator_root"
            android:layout_margin="@dimen/default_margin"
            android:clickable="true"
            app:borderWidth="0dp"
            app:elevation="3dp"
            app:pressedTranslationZ="6dp"/>
    </android.support.design.widget.CoordinatorLayout>
</LinearLayout>
