<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_margin">

        <LinearLayout
            android:id="@+id/selector_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_title_line_height"
            android:orientation="horizontal"
            android:weightSum="6">

            <TextView
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="6dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/statistic_start_hint" />

            <TextView
                android:id="@+id/start_date"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:padding="6dp"
                android:ellipsize="end"
                android:gravity="center"
                android:textStyle="bold"
                android:hint="@string/start_date"/>

            <TextView
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="6dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/statistic_end_hint" />

            <TextView
                android:id="@+id/end_date"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:padding="6dp"
                android:ellipsize="end"
                android:gravity="center"
                android:textStyle="bold"
                android:hint="@string/end_date"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/category_details_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

        </LinearLayout>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/chart"
            android:layout_below="@+id/selector_container"
            android:layout_above="@id/category_details_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_margin"
            android:gravity="center"
            android:minHeight="300dp"/>
    </RelativeLayout>
</ScrollView>
